# fuzzm-project

./: .gitignore  README.md  copy-results.js  copy-results.sh  fuzz-inputs.txt  init-workspace.sh  package-lock.json  package.json  prepare-magma.sh  prepare.js  prepare.sh
AFL-wasm/: .gitignore  .ycm_extra_conf.py  Makefile  README.md  afl-fuzz.c  analyze-crashes.js
benchmark-runner/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
benchmark-runner/plot-scripts/: plot-with-conf.plg
benchmark-runner/plots/: plot-with-conf.plg
benchmarks/: .gitignore  compile-all.sh  compile-lava.sh  instrument-all-wasm.sh
legacy/: copy-results.sh  prepare.sh
motivating-example/: compile-and-run.sh  vuln-afl.native  vuln-cov-canaries.wasm  vuln-cov.wasm  vuln.c  vuln.native  vuln.uninstr.wasm
wasm-bench/: template.hbs
wasm_instrumenter/: .gitignore  Cargo.toml  README.md
wasm_instrumenter/benchmarks/bzip2/: clean.sh  compile.sh
wasm_instrumenter/benchmarks/gzip/: clean.sh  compile.sh
wasm_instrumenter/benchmarks/oggenc/: clean.sh  compile.sh
wasm_instrumenter/example/: .gitignore
wasm_instrumenter/example/malloc/: malloc  malloc.c
wasm_instrumenter/example/multi-return/: multi.c
wasm_instrumenter/example/open-file/: file  file.c
wasm_instrumenter/example/overflow/: simple-overflow.c
wasm_instrumenter/example/overflow-heap/: heap-overflow  heap-overflow.c
wasm_instrumenter/lib/: wasm
wasm_instrumenter/src/: afl_branch.rs  canaries.rs  lib.rs
wasm_instrumenter/src/shared/: mod.rs
wasm_instrumenter/tests/: benchmarks.rs
(+25919 files in other folders)
