[package]
name = "wasm_instrumenter"
version = "0.1.0"
authors = ["Foo <foo@bar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm = { git = "https://github.com/danleh/wasabi" }
rand = "0.7.3"
rand_distr = "0.3.0"
clap = "2.33.3"

[dev-dependencies]
serial_test = "*"
